test-cases/final-dump/trait_error_not_a_trait.wybe
# Verify abstract procedures must be defined in trait modules.

module my_trait {
    trait
}

abstract not_a_trait(x:T<:my_trait): string
